--- a/sports-league/pom.xml
+++ b/sports-league/pom.xml
@@ -55,6 +55,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.6</version>
+			<scope>compile</scope>
+		</dependency>
     </dependencies>
 
 	<build>
